# societyOfMachines

./: .directory  .gitignore  README  links
IPCOnlyVersion/: CMakeLists.txt  TODO  octave-workspace
IPCOnlyVersion/messages/: CMakeLists.txt  localURI.proto  localURIQuery.proto  localURIRemovalRequest.proto  localURIReplyHeader.proto  messageContainer.proto
IPCOnlyVersion/src/: .localURIDatabase.h.swp  CMakeLists.txt
IPCOnlyVersion/src/libraryCode/: CMakeLists.txt  localRequester.cpp  localURIDatabase.cpp  localURIDatabase.h  localURIEngine.cpp  localURIEngine.hpp  localURIServerSingleton.cpp  utilityFunctions.cpp  utilityFunctions.h
IPCOnlyVersion/src/testCases/testDatabase/: CMakeLists.txt  main.cpp  testDatabase
IPCOnlyVersion/src/testCases/testPubSub/: CMakeLists.txt
IPCOnlyVersion/src/testCases/testPubSub/publisherProcess/: CMakeLists.txt  testPubSubPublisher
IPCOnlyVersion/src/testCases/testPubSub/subscriberProcess/: CMakeLists.txt  main.cpp  testPubSubSubscriber
IPCOnlyVersion/src/testCases/testPubSubURISearching/: CMakeLists.txt  main.cpp  testPubSubURISearching
IPCOnlyVersion/src/testCases/testRequestReply/replierProcess/: CMakeLists.txt  main.cpp  testRequestReplierReplier
IPCOnlyVersion/src/testCases/testRequestReply/requesterProcess/: CMakeLists.txt  main.cpp  testRequestReplierRequester
ipcOnlyVersion/: CMakeLists.txt  Makefile
ipcOnlyVersion/messages/: CMakeLists.txt  Makefile  localURI.pb.cc  localURI.pb.h  localURI.proto  localURIQuery.pb.cc  localURIQuery.pb.h  localURIQuery.proto
tests/ZMQ/datagramRoutingWithInproc/: CMakeLists.txt
tests/ZMQ/pollingINPROC_PAIRSockets/: CMakeLists.txt  octave-workspace  server  testExample.cpp
tests/ZMQ/routerDealerWithINPROC/: CMakeLists.txt  main.cpp  test
tests/boost/bigIntegers/: CMakeLists.txt  main.cpp  test
tests/boost/hashToBigIntegerAndBack/: CMakeLists.txt  links  main.cpp  test
tests/boost/testHeaderAgain/: hashAndBigNumberFunctions.cpp  hashAndBigNumberFunctions.hpp  main.cpp  test
tests/chord/chordTestFramework/: CMakeLists.txt  log  octave-workspace
tests/chord/chordTestFramework/messages/: closestPredecessorRequest.proto  closestPredecessorsRequestResponse.proto  datagramAddress.proto  findAddressOwnerRequestOrResponse.proto  informationRequest.proto  informationRequestResponse.proto  messageContainer.proto  nodeIsActiveRequestResponse.proto  predecessorRequest.proto  predecessorResponse.proto  signalAck.proto  stabilizationRequestOrResponse.proto  virtualPortMessageHeader.proto  virtualPortRouterRequestOrResponse.proto
tests/chord/chordTestFramework/src/: CMakeLists.txt  SOMException.cpp  SOMException.hpp  chordEvent.cpp  chordEvent.hpp  chordNode.cpp  chordNode.hpp  chordNodeManager.cpp  chordNodeManager.hpp  findAddressOwnerRequest.cpp  findAddressOwnerRequest.hpp  findAddressOwnerRequestInfo.cpp  findAddressOwnerRequestInfo.hpp  fingerTable.cpp  fingerTable.hpp  hashAndBigNumberFunctions.cpp  main.cpp  nodeIsActiveRequest.cpp  nodeIsActiveRequest.hpp  notes  test  virtualPortAssignments  virtualPortPairSocketWrapper.cpp  virtualPortRouter.cpp  virtualPortRouter.hpp
tests/chord/chordTestFramework/src/old/: datagramRouter.cpp  datagramRouter.hpp
tests/exceptions/concatenatingSOMException/: main.cpp  test
tests/exceptions/originalSOMException/: CMakeLists.txt  SOMException.cpp  SOMException.h  main.cpp
tests/fingerTables/: CMakeLists.txt
tests/fingerTables/messages/: chordNodeContactInformation.proto  closestPredecessorRequest.proto  closestPredecessorRequestResponse.proto  messageContainer.proto  predecessorRequest.proto  predecessorResponse.proto  virtualPortMessageHeader.proto  virtualPortRouterRequestOrResponse.proto
tests/fingerTables/src/: fingerTable.cpp  fingerTable.hpp  hashAndBigNumberFunctions.hpp  main.cpp
tests/libprotobuf/abstractMessageContainer/: CMakeLists.txt
tests/libprotobuf/compilationWithCMake/: CMakeLists.txt  Makefile
tests/libsodium/sha512/: CMakeLists.txt  main.cpp  test
tests/pubSubWithIPC/client/: client.cpp
tests/pubSubWithIPC/server/: server  server.cpp  zhelpers.h
tests/reqRepWithIPC/client/: client.cpp
tests/reqRepWithIPC/server/: Makefile  server.cpp
tests/scopeGuard/: SOMScopeGuard.hpp  main.cpp  test
tests/sqlite/: notes
tests/sqlite/localURIDatabase/: CMakeLists.txt  Makefile
tests/sqlite/localURIDatabase/src/: #fiddlingWithGedit#  CMakeLists.txt  Makefile  TODO  classDeclarations.h  fiddlingWithGedit  localReplier.cpp  localReplier.hpp  localRequester.hpp  localStreamPublisher.cpp  localStreamPublisher.hpp  localStreamSubscriber.cpp  localStreamSubscriber.hpp  localURIAPI.h  localURIDatabase  localURIDatabase.cpp  localURIDatabase.h  localURIEngine.hpp  localURIServerSingleton.h  main.cpp  testDatabase.db
tests/sqlite/localURIDatabase/src/testCode/testDatabase/: CMakeLists.txt  testDatabase
tests/sqlite/localURIDatabase/src/testCode/testPubSub/publisherProcess/: CMakeLists.txt  main.cpp  testPubSubPublisher
tests/sqlite/localURIDatabase/src/testCode/testPubSub/subscriberProcess/: CMakeLists.txt  testPubSubSubscriber
tests/sqlite/localURIDatabase/src/testCode/testPubSubURISearching/: CMakeLists.txt  testPubSubURISearching
tests/sqlite/localURIDatabase/src/testCode/testRequestReply/: CMakeLists.txt
tests/sqlite/localURIDatabase/src/testCode/testRequestReply/replierProcess/: CMakeLists.txt  testRequestReplierReplier
tests/sqlite/localURIDatabase/src/testCode/testRequestReply/requesterProcess/: CMakeLists.txt  testRequestReplierRequester
tests/sqlite/localURIQueries/: localURIsModel.db  localURIsModel2.db  notes  test0.db
tests/time/: CMakeLists.txt  main.cpp  test
tests/virtualPortRouter/messages/: chordNodeContactInformation.proto  closestPredecessorRequestResponse.proto  closestPredecessorsRequest.proto  findAddressOwnerRequestOrResponse.proto  messageContainer.proto  predecessorResponse.proto  stabilizationRequestOrResponse.proto
tests/virtualPortRouter/src/: featuresToAdd  main.cpp  notes  test  virtualPortPairSocketWrapper.hpp  virtualPortRouter.cpp  virtualPortRouter.hpp
(+69 files in other folders)
